# Grapevine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grapevine_v1.py
gtest/: Makefile  config.status  libtool
gtest/lib/: libgtest_main.la
gtest/lib/.libs/: libgtest.so.0.0.0  libgtest_main.so.0.0.0
gtest/samples/.deps/: sample2.Plo  sample4.Plo
gtest/src/.deps/: gtest-all.Plo  gtest_main.Plo
include/: grapevine.h  grapevine.hpp
script/: avahi_start.sh  config.sh
src/: grapevine.c  grapevine.cpp  gv_browser.cpp  gv_browser.hpp  gv_channel.cpp  gv_channel.hpp  gv_communicator.cpp  gv_communicator.h  gv_communicator.hpp  gv_cpp14_compatibility.h  gv_cpp14_make_unique.h  gv_type.c  gv_type.cpp  gv_type.h  gv_type.h.gch  gv_type.hpp  gv_util.c  gv_util.cpp  gv_util.h  gv_util.hpp  gv_zeroconf.cpp  gv_zeroconf.h  gv_zeroconf.hpp  gv_zmq.cpp  gv_zmq.h
src/cplusplus/: todo.md
src/python/: grapevine.py
test/: gv_test.cpp  gv_test.h  gv_test.hpp  test_gv_browser.cpp  test_gv_browser.h  test_gv_browser.hpp  test_gv_channel.cpp  test_gv_channel.h  test_gv_channel.hpp  test_gv_communicator.cpp  test_gv_type.cpp  test_gv_type.h  test_gv_type.hpp  test_gv_util.c  test_gv_util.cpp  test_gv_zeroconf.cpp  test_gv_zeroconf.h  test_gv_zeroconf.hpp  test_gv_zmq.cpp
